fixed spacing issues, still have an issue where the width is slightly bigger in reverse cards

--- a/styles/global.css
+++ b/styles/global.css
@@ -202,7 +202,6 @@
 .project1-desc {
 	z-index: 2;
 	color: #f3f7f0;
-	background-color: #1e1e1e;
 	max-width: 60%;
 	position: absolute;
 	transform: translateY(-50%);
@@ -220,29 +219,27 @@
 	position: relative;
 }
 
-.project2-card {
-	z-index: 1;
-	width: 60%;
-	height: 45vh;
-	border-radius: 0px;
-	background-color: #f3f7f0;
-	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-	background-image: url("/BetterMessages2.png"); /* Add your image here */
-	background-size: cover; /* Adjust the size of the image */
-	background-position: center; /* Adjust the position of the image */
-	max-width: 60%; /* Add this line */
-	position: absolute;
-	transform: translateY(-50%);
-	top: 50%;
-	left: 50%;
-}
-
 .project2-desc {
 	z-index: 2;
 	color: #f3f7f0;
-	background-color: #1e1e1e;
 	max-width: 60%;
-	position: relative;
+	position: absolute;
+	transform: translateY(-50%);
+	top: 50%;
+	left: 0%;
+}
+
+.project2-title {
+	color: #f3f7f0;
+	font-family: "Oswald", sans-serif;
+	letter-spacing: 0.25rem;
+	width: calc(100% + 0.25rem);
+	font-size: 4vh;
+	line-height: 1.25;
+	font-weight: 700;
+	margin-bottom: var(--spacing);
+	margin-top: 0 !important;
+	text-align: left;
 }
 
 .project1-title {
@@ -268,6 +265,7 @@
 }
 
 .project1-text {
+	background-color: #1e1e1e;
 	font-family: "Courier New", monospace;
 	font-size: 1vw;
 	gap: 2vh;
@@ -277,6 +275,21 @@
 	letter-spacing: 0;
 	padding: 0;
 	list-style: none;
+	text-align: right;
+}
+
+.project2-text {
+	background-color: #1e1e1e;
+	font-family: "Courier New", monospace;
+	font-size: 1vw;
+	gap: 2vh;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: var(--flex-alignment);
+	letter-spacing: 0;
+	padding: 0;
+	list-style: none;
+	text-align: left;
 }
 
 .menu-container {
